--- a/JanssenIo.ReviewBot.ArchiveParser/JanssenIo.ReviewBot.ArchiveParser.csproj
+++ b/JanssenIo.ReviewBot.ArchiveParser/JanssenIo.ReviewBot.ArchiveParser.csproj
@@ -7,6 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="CreateSecrets.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="CreateSecrets.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="CsvHelper" Version="26.1.0" />
     <PackageReference Include="LiteDB" Version="5.0.10" />
     <PackageReference Include="Microsoft.ApplicationInsights" Version="2.17.0" />
