--- a/JanssenIo.ReviewBot/JanssenIo.ReviewBot.csproj
+++ b/JanssenIo.ReviewBot/JanssenIo.ReviewBot.csproj
@@ -8,6 +8,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="CreateSecrets.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="CreateSecrets.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="LiteDB" Version="5.0.10" />
     <PackageReference Include="Microsoft.ApplicationInsights" Version="2.17.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.1" />
