--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -1,8 +1,8 @@
-name: .NET
+name: Test
 
 on:
-  push:
-    branches: [ master ]
+  # push:
+    # branches: [ master ]
   pull_request:
     branches: [ master ]
 
