Filter logging via appsettings

--- a/JanssenIo.ReviewBot.ArchiveParser/appsettings.json
+++ b/JanssenIo.ReviewBot.ArchiveParser/appsettings.json
@@ -9,5 +9,17 @@
   },
   "Store": {
     "ConnectionString": "[from secrets]"
+  },
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information"
+    },
+    "ApplicationInsights": {
+      "LogLevel": {
+        "Default": "Information",
+        "Microsoft": "Warning",
+        "Microsoft.Hosting.Lifetime": "Warning"
+      }
+    }
   }
 }
