--- a/JanssenIo.ReviewBot.ArchiveParser/JanssenIo.ReviewBot.ArchiveParser.csproj
+++ b/JanssenIo.ReviewBot.ArchiveParser/JanssenIo.ReviewBot.ArchiveParser.csproj
@@ -19,10 +19,15 @@
     <PackageReference Include="LiteDB" Version="5.0.17" />
     <PackageReference Include="Microsoft.ApplicationInsights" Version="2.21.0" />
     <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.36.0" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.1" />
-    <PackageReference Include="Microsoft.Extensions.Http" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.ApplicationInsights" Version="2.21.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\JanssenIo.ReviewBot.Core\JanssenIo.ReviewBot.Core.csproj" />
   </ItemGroup>
 
   <ItemGroup>
