--- a/TokenRetriever/TokenRetriever.csproj
+++ b/TokenRetriever/TokenRetriever.csproj
@@ -2,12 +2,12 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Reddit" Version="1.5.0" />
-    <PackageReference Include="Reddit.AuthTokenRetrieverLib" Version="1.5.1" />
+    <PackageReference Include="Reddit" Version="1.5.2" />
+    <PackageReference Include="Reddit.AuthTokenRetrieverLib" Version="1.5.2" />
   </ItemGroup>
 
 </Project>
