rename bot project

--- a/JanssenIo.ReviewBot.Azure/JanssenIo.ReviewBot.Azure.csproj
+++ b/JanssenIo.ReviewBot.Azure/JanssenIo.ReviewBot.Azure.csproj
@@ -9,7 +9,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\JanssenIo.ReviewBot.ArchiveParser\JanssenIo.ReviewBot.ArchiveParser.csproj" />
-    <ProjectReference Include="..\JanssenIo.ReviewBot\JanssenIo.ReviewBot.csproj" />
+    <ProjectReference Include="..\JanssenIo.ReviewBot.Replies\JanssenIo.ReviewBot.Replies.csproj" />
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
