--- a/JanssenIo.ReviewBot.Azure/JanssenIo.ReviewBot.Azure.csproj
+++ b/JanssenIo.ReviewBot.Azure/JanssenIo.ReviewBot.Azure.csproj
@@ -4,12 +4,13 @@
     <AzureFunctionsVersion>v4</AzureFunctionsVersion>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.36.0" />
     <PackageReference Include="Microsoft.Azure.Functions.Extensions" Version="1.1.0" />
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="4.1.1" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\JanssenIo.ReviewBot.ArchiveParser\JanssenIo.ReviewBot.ArchiveParser.csproj" />
-    <ProjectReference Include="..\JanssenIo.ReviewBot\JanssenIo.ReviewBot.csproj" />
+    <ProjectReference Include="..\JanssenIo.ReviewBot.Replies\JanssenIo.ReviewBot.Replies.csproj" />
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
