--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -71,7 +71,7 @@ jobs:
       if: ${{ env.IS_MAIN == 'true' }}
       with:
         subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-        resourceGroupName: ${{ secrets.AZURE_RESOURCEGROUP_NAME }}
+        resourceGroupName: ${{ vars.AZURE_RESOURCEGROUP_NAME }}
         template: ${{ ENV.INFRA_AS_CODE }}
         failOnStdErr: false
 
@@ -79,13 +79,13 @@ jobs:
       if: ${{ env.IS_MAIN == 'false' }}
       run: >
         az deployment group validate
-          --resource-group ${{ secrets.AZURE_RESOURCEGROUP_NAME }}
+          --resource-group ${{ vars.AZURE_RESOURCEGROUP_NAME }}
           --template-file $INFRA_AS_CODE
 
     - name: What-if Bicep files
       if: ${{ env.IS_MAIN == 'false' }}
       run: >
         az deployment group what-if
-          --resource-group ${{ secrets.AZURE_RESOURCEGROUP_NAME }}
+          --resource-group ${{ vars.AZURE_RESOURCEGROUP_NAME }}
           --template-file $INFRA_AS_CODE
 
