--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,10 +33,10 @@ jobs:
       run: dotnet restore
 
     - name: Build
-      run: dotnet build --no-restore -c Release
+      run: dotnet build --no-restore -c Release $AZURE_PROJ
 
     - name: Test
-      run: dotnet test --no-build --verbosity normal -c Release
+      run: dotnet test --no-build --verbosity normal -c Release $AZURE_PROJ
 
     - name: Publish
       run: dotnet publish -c Release -r linux-x64 -o $RELEASE_DIR $AZURE_PROJ
