--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,7 +30,7 @@ jobs:
         dotnet-version: 8.0.x
 
     - name: Restore dependencies
-      run: dotnet restore
+      run: dotnet restore $AZURE_PROJ
 
     - name: Build
       run: dotnet build --no-restore -c Release $AZURE_PROJ
@@ -73,6 +73,7 @@ jobs:
         subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
         resourceGroupName: ${{ vars.AZURE_RESOURCEGROUP_NAME }}
         template: ${{ ENV.INFRA_AS_CODE }}
+        parameters: "botId=${{ vars.BOT_CLIENT_ID }}"
         failOnStdErr: false
 
     - name: Validate Bicep files
@@ -81,6 +82,7 @@ jobs:
         az deployment group validate \
           --resource-group ${{ vars.AZURE_RESOURCEGROUP_NAME }} \
           --template-file $INFRA_AS_CODE
+          --parameters botId=${{ vars.BOT_CLIENT_ID }}
 
     - name: What-if Bicep files
       if: ${{ env.IS_MAIN == 'false' }}
@@ -88,4 +90,5 @@ jobs:
         az deployment group what-if \
           --resource-group ${{ vars.AZURE_RESOURCEGROUP_NAME }} \
           --template-file $INFRA_AS_CODE
+          --parameters botId=${{ vars.BOT_CLIENT_ID }}
 
