--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -81,14 +81,14 @@ jobs:
       run: |
         az deployment group validate \
           --resource-group ${{ vars.AZURE_RESOURCEGROUP_NAME }} \
-          --template-file $INFRA_AS_CODE
-          --parameters "botId=${{ vars.BOT_CLIENT_ID }}"
+          --template-file $INFRA_AS_CODE \
+          --parameters botId='${{ vars.BOT_CLIENT_ID }}''
 
     - name: What-if Bicep files
       if: ${{ env.IS_MAIN == 'false' }}
       run: |
         az deployment group what-if \
           --resource-group ${{ vars.AZURE_RESOURCEGROUP_NAME }} \
-          --template-file $INFRA_AS_CODE
-          --parameters "botId=${{ vars.BOT_CLIENT_ID }}"
+          --template-file $INFRA_AS_CODE \
+          --parameters botId='${{ vars.BOT_CLIENT_ID }}''
 
