--- a/JanssenIo.ReviewBot.Azure/JanssenIo.ReviewBot.Azure.csproj
+++ b/JanssenIo.ReviewBot.Azure/JanssenIo.ReviewBot.Azure.csproj
@@ -2,11 +2,12 @@
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <AzureFunctionsVersion>v4</AzureFunctionsVersion>
+    <OutputType>Exe</OutputType>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.41.0" />
-    <PackageReference Include="Microsoft.Azure.Functions.Extensions" Version="1.1.0" />
-    <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="4.4.0" />
+    <PackageReference Include="Microsoft.Azure.Functions.Worker" Version="1.22.0" />
+    <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.Timer" Version="4.3.1" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\JanssenIo.ReviewBot.ArchiveParser\JanssenIo.ReviewBot.ArchiveParser.csproj" />
