--- a/JanssenIo.ReviewBot.Functions/Properties/launchSettings.json
+++ b/JanssenIo.ReviewBot.Functions/Properties/launchSettings.json
@@ -1,8 +1,8 @@
 {
   "profiles": {
-    "JanssenIo.ReviewBot.Azure": {
+    "JanssenIo.ReviewBot.Functions": {
       "commandName": "Project",
-      "commandLineArgs": "--port 7178",
+      "commandLineArgs": "--port 7283",
       "launchBrowser": false
     }
   }
