--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -66,7 +66,7 @@ jobs:
     - name: Set PACKAGE_URL = tag
       if: ${{ env.IS_MAIN == 'true' }}
       shell: bash
-      run: echo "PACKAGE_URL=https://github.com/janssen-io/ReviewBot/releases/download/v1.0.4/functions.zip" >> "$GITHUB_ENV"
+      run: echo "PACKAGE_URL=https://github.com/janssen-io/ReviewBot/releases/download/${{ github.ref_name }}/functions.zip" >> "$GITHUB_ENV"
 
     - name: OIDC Login to Azure Public Cloud
       uses: azure/login@v1
